fixed an error with subscribing to deeply nested subfolders.

made it so the address entry windows actually show up in desktop mode.

bringing up folders in disconnected mode shows the correct number of
read and unread messages again.

fixed the display of the folders in the folder tree.

made it so new external frames don't end up all going at 0,0.

fixed a possible NPE in the MessageProxy if a message has an incorrectly
formatted header.

fixed a bug where an address without a personal name couldn't be added to
the address book.

added a button for actually using the address list to pull in addresses
to the to:, cc:, and bcc: fields.

changed the message display code so that searches work a bit better with
items in a sent folder.

fixed a possible deadlock in manipulating messages that are the results
of a search.

added a search in progress dialog so that you can see that something's
happening while waiting for search results.

added an attachment icon to the main folder/message table.

020810 release
--------------

NOTE:  i modified the local mail store (mbox) configuration a bit.  if you're
using any local mail folders, you may need to change the Mail Directory and
Inbox File settings.  your inbox is specified by Inbox File; subfolders are
stored in Mail Directory/folders.

pooka can now exit even if all the open stores aren't available.

made it so we don't do unnecessary redraws on the folder panel every time
a message changes or is loaded.

removed several excess communications with the mail store.

added a disconnected icon so that it looks different if you're browsing
messages in connected vs. disconnected imap.

added an icon for the root node in the folder tree.

updated the NewAccountPooka so that you can set a better variety of choices
during setup.

added ssl support for pop3 folders.

added Add buttons to many of the list choices in the configuration editors.
makes it a lot easier to add all of the items that you want in the correct
order.
